# deseo

./: .hgignore  Asterix.hs  Bits.hs  CABAL.txt  DEVEL.txt  README.markdown  README.md  changelog.md  default.nix  dependencies  deseo.cabal  shell.nix  test1.hs  test3.hs
Data/: Asterix.hs  BitString.hs  Bits.hs
Data/Asterix/: Expression.hs
tests/: Main.hs  README.txt  TestAsterix.hs  TestBitString.hs  TestExpression.hs  printout.hs  test-asterix.hs  test-bitstring.hs  test-expression.hs
tests/Data/: BitString.hs
tests/xml/: cat000_0.0.xml  cat000_1.2.xml
