name:                deseo
version:             1.1.0.0
synopsis:            Asterix decoder/encoder
license:             GPL-3
license-file:        LICENSE
author:              Zoran Bošnjak <zoran.bosnjak@sloveniacontrol.si>
maintainer:          Zoran Bošnjak <zoran.bosnjak@sloveniacontrol.si>
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >= 1.8
description:         
    An Asterix decoding and encoding library.

extra-source-files:
    README.markdown
    changelog.md

flag developer
    description: operate in developer mode
    default: False
    manual: True

library
    exposed-modules:     
        Data.Asterix
        Data.BitString

    other-modules:       
        Data.Asterix.Expression

    build-depends:
        QuickCheck,
        base == 4.9.*,
        language-python == 0.5.*,
        bytestring == 0.10.*,
        deepseq == 1.4.*,
        deepseq-generics == 0.2.*,
        mtl == 2.2.*,
        containers == 0.5.*,
        xml == 1.3.*

    if flag(developer)
        ghc-options: -Werror
        ghc-prof-options: -auto-all
    
    ghc-options: -O2 -Wall

source-repository head
    type:     mercurial
    -- location: https://path.domain/url

test-suite test-expression
    type:       exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is:    test-expression.hs
    build-depends:  
                    base,
                    deseo,
                    HUnit,
                    language-python,
                    QuickCheck,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2
    ghc-options: -O2 -Wall

test-suite test-bitstring
    type:       exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is:    test-bitstring.hs
    build-depends:  
                    base,
                    deseo,
                    HUnit,
                    QuickCheck,
                    bytestring,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2
    ghc-options: -O2 -Wall

test-suite test-asterix
    type:       exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is:    test-asterix.hs
    build-depends:  
                    base,
                    containers,
                    deseo,
                    HUnit,
                    QuickCheck,
                    bytestring,
                    filepath,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2
    ghc-options: -O2 -Wall

