name:                deseo
version:             1.3.0.0
synopsis:            Asterix decoder/encoder
license:             GPL-3
license-file:        LICENSE
author:              Zoran Bošnjak <zoran.bosnjak@sloveniacontrol.si>
maintainer:          Zoran Bošnjak <zoran.bosnjak@sloveniacontrol.si>
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >= 1.10
description:
    An Asterix decoding and encoding library.

extra-source-files:
    README.markdown
    changelog.md

flag developer
    description: operate in developer mode
    default: False
    manual: True

library
    ghc-options:         -O2 -Wall -funbox-strict-fields

    default-language:    Haskell2010

    default-extensions:  StrictData

    exposed-modules:
        Data.Asterix
        Data.BitString

    other-modules:
        Data.Asterix.Expression

    build-depends:
        QuickCheck
        , base >=4.9 && <4.10
        , bytestring >=0.10 && <0.11
        , deepseq >=1.4 && <1.5
        , deepseq-generics >=0.2 && <0.3
        , megaparsec >=5.0 && <5.3
        , mtl >=2.2 && <2.3
        , containers >= 0.5 && <0.6
        , xml >=1.3 && <1.4

    if flag(developer)
        ghc-options: -Werror
        ghc-prof-options: -auto-all

source-repository head
    type:     git
    -- location: https://path.domain/url

test-suite test-deseo
    ghc-options:        -O2 -Wall -funbox-strict-fields
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests
    main-is:            Main.hs
    build-depends:
        base
        , containers
        , deseo
        , HUnit
        , QuickCheck
        , bytestring
        , filepath
        , test-framework
        , test-framework-hunit
        , test-framework-quickcheck2

