name:                deseo
version:             1.5.0
synopsis:            Asterix decoder/encoder
license:             GPL-3
license-file:        LICENSE
author:              Zoran Bošnjak <zoran.bosnjak@sloveniacontrol.si>
maintainer:          Zoran Bošnjak <zoran.bosnjak@sloveniacontrol.si>
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >= 1.10
description:
    An Asterix decoding and encoding library.

extra-source-files:
    README.markdown
    changelog.md

flag developer
    description: operate in developer mode
    default: False
    manual: True

library
    ghc-options:         -O2 -Wall -funbox-strict-fields

    default-language:    Haskell2010

    default-extensions:  StrictData

    exposed-modules:
        Data.Asterix
        Data.BitString

    other-modules:
        Data.Asterix.Expression

    build-depends:
        QuickCheck
        , base < 5
        , bytestring
        , base16-bytestring
        , base64-bytestring
        , deepseq
        , deepseq-generics
        , megaparsec
        , parser-combinators
        , mtl
        , containers
        , xml

    if flag(developer)
        ghc-options: -Werror
        ghc-prof-options: -auto-all

source-repository head
    type:     git
    -- location: https://path.domain/url

test-suite test-deseo
    ghc-options:        -O2 -Wall -funbox-strict-fields
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests
    main-is:            Main.hs
    other-modules:
        TestAsterix
        , TestBitString
        , TestExpression
    build-depends:
        base
        , containers
        , deseo
        , HUnit
        , QuickCheck
        , bytestring
        , base16-bytestring
        , base64-bytestring
        , filepath
        , test-framework
        , test-framework-hunit
        , test-framework-quickcheck2

